apps/infrastructure/portainer/app/ingress.yaml
# ---
# apiVersion: traefik.io/v1alpha1
# kind: Middleware
# metadata:
#   name: default-headers
#   namespace: infrastructure
# spec:
#   headers:
#     browserXssFilter: true
#     contentTypeNosniff: true
#     forceSTSHeader: true
#     stsIncludeSubdomains: true
#     stsSeconds: 15552000
#     customFrameOptionsValue: SAMEORIGIN
#     customRequestHeaders:
#       X-Forwarded-Proto: "https"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portainer-webui
  namespace: infrastructure
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`portainer.inf.${PERSONAL_DOMAIN}`)
      kind: Rule
      # middlewares:
      #   - name: default-headers
      services:
        - name: portainer
          port: 9000
  tls:
    secretName: inf-personal-domain-tls
